hphp/hack/test/typecheck/shape/shape_idx_unresolved_shape_1.php.like_types.exp
File "shape_idx_unresolved_shape_1.php", line 14, characters 22-23:
Invalid argument (Typing[4110])
File "shape_idx_unresolved_shape_1.php", line 14, characters 22-23:
Expected shape(?'bar' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_unresolved_shape_1.php", line 4, characters 37-64:
But got dynamic because it is an unenforceable type
